samples/_failures_safe/1761599899_3202b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27f8650c.c: In function ‘print_token’:
./samples/SAFE/__tmp_27f8650c.c:175:12: error: missing terminating " character
  175 |     printf("%-12s
      |            ^~~~~~
./samples/SAFE/__tmp_27f8650c.c:175:5: error: expected expression at end of input
  175 |     printf("%-12s
      |     ^~~~~~
./samples/SAFE/__tmp_27f8650c.c:175:5: error: expected declaration or statement at end of input
